Code review updates
updates, variables, functions, names of files, update instances

--- a/Month2/Pointers_Exercise/Section1Pointers/Exercise3/Exercise3.vcxproj.filters
+++ b/Month2/Pointers_Exercise/Section1Pointers/Exercise3/Exercise3.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source3.cpp">
+    <ClCompile Include="Exercise3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
