--- a/Month2/Pointers_Exercise/Section1Pointers/Exercise6/Exercise6.vcxproj.filters
+++ b/Month2/Pointers_Exercise/Section1Pointers/Exercise6/Exercise6.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source6.cpp">
+    <ClCompile Include="Exercise6.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
