--- a/Month2/Pointers_Exercise/Section1Pointers/Exercise3/Exercise3.vcxproj
+++ b/Month2/Pointers_Exercise/Section1Pointers/Exercise3/Exercise3.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source3.cpp" />
+    <ClCompile Include="Exercise3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
