--- a/Month2/Pointers_Exercise/Section1Pointers/Exercise4/Exercise4.vcxproj.filters
+++ b/Month2/Pointers_Exercise/Section1Pointers/Exercise4/Exercise4.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source4.cpp">
+    <ClCompile Include="Exercise4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
