--- a/Month2/Pointers_Exercise/Section1Pointers/Exercise5/Exercise5.vcxproj
+++ b/Month2/Pointers_Exercise/Section1Pointers/Exercise5/Exercise5.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source5.cpp" />
+    <ClCompile Include="Exercise5.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
