--- a/Month2/Pointers_Exercise/Section1Pointers/Exercise7/Exercise7.vcxproj
+++ b/Month2/Pointers_Exercise/Section1Pointers/Exercise7/Exercise7.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source7.cpp" />
+    <ClCompile Include="Exerise7.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
