--- a/Month2/Pointers_Exercise/Section1Pointers/Exercise7/Exercise7.vcxproj.filters
+++ b/Month2/Pointers_Exercise/Section1Pointers/Exercise7/Exercise7.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source7.cpp">
+    <ClCompile Include="Exerise7.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
