Updates and Exercise 6-9
Create DinamicArray
Created:
 class TDinamicArray
Empty()
Front()
Back()
GetData()
operator();

--- a/Month3/Project1/Project1/Project1.vcxproj.filters
+++ b/Month3/Project1/Project1/Project1.vcxproj.filters
@@ -26,5 +26,14 @@
     <ClInclude Include="TStaticArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Circle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Square.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TDinamicArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
