--- a/Month3/Project1/Project1/Project1.vcxproj
+++ b/Month3/Project1/Project1/Project1.vcxproj
@@ -132,6 +132,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ArrayVectors.h" />
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="Square.h" />
+    <ClInclude Include="TDinamicArray.h" />
     <ClInclude Include="TStaticArray.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
