--- a/Month3/LinkedList/LinkedList/LinkedList.vcxproj
+++ b/Month3/LinkedList/LinkedList/LinkedList.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClInclude Include="TSLList.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="TSLList.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
