--- a/Month3/LinkedList/LinkedList/LinkedList.vcxproj
+++ b/Month3/LinkedList/LinkedList/LinkedList.vcxproj
@@ -133,7 +133,7 @@
     <ClInclude Include="TSLList.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TSLList.cpp" />
+    <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
