Charge Sprite Ship Asteroid

--- a/Month4/Tron/Tron/Tron.vcxproj
+++ b/Month4/Tron/Tron/Tron.vcxproj
@@ -127,11 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FPlayer.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="olcPixelGameEngine.h" />
-    <ClInclude Include="Player.h" />
+    <ClInclude Include="FPlayer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
