--- a/Month4/Tron/Tron/Tron.vcxproj.filters
+++ b/Month4/Tron/Tron/Tron.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FPlayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -23,7 +26,7 @@
     <ClInclude Include="olcPixelGameEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h">
+    <ClInclude Include="FPlayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
